--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   	</style>
 </head>
 <body>
+    ::CLOUDFLARE_ERROR_1000S_BOX::
     <div class="maintain">
       <h1>WEBSITE UNDER MAINTENANCE</h1>
       <h3>WE WILL BE BACK IN A WHILE.</h3>
