--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ ul.cferror_details {
 </style>
 <body>
     <div class="cf-error-msg-wrap">
-        <div class="f-error-msg-heading">Cannot Access the webite</div></br></br>
+        <div class="f-error-msg-heading">Cannot Access the website</div></br></br>
         <div class="f-error-msg-content">
             Don't worry you are not banned / blocked from webite.</br></br>
             <span>Why are you seeing this page ?</span></br></br>
