--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ ul.cferror_details {
     <div class="cf-error-msg-wrap">
         <div class="f-error-msg-heading">Cannot Access the website</div></br></br>
         <div class="f-error-msg-content">
-            Don't worry you are not banned / blocked from webite.</br></br>
+            Don't worry you are not banned / blocked from website.</br></br>
             <span>Why are you seeing this page ?</span></br></br>
              <pre>- Website maybe under maintenance for fixing bugs or any realtive issues.</pre>
              <pre>- Website maybe under server upgradation for better performance.</pre>
