--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@ ul.cferror_details {
         <div class="f-error-msg-content">
             Don't worry you are not banned / blocked from website.</br></br>
             <span>Why are you seeing this page ?</span></br></br>
-             <pre>- Website maybe under maintenance for fixing bugs or any realtive issues.</pre>
-             <pre>- Website maybe under server upgradation for better performance.</pre>
+             <pre>- Website maybe under maintenance.</pre>
+             <pre>- Upgrading the Server.</pre>
              <pre>- Server may be down, Due to some error.</pre>
-             <pre>- Website maybe under server upgradation for better performance.</pre>
+             <pre>- Solving some bugs.</pre>
             <span>What you can do ?</span></br></br>
-            we do notify before going on maintenance mode , so join our discord server, we will update here</br>
+            we do notify before going on maintenance mode , so join our discord server, we will update here</br></br>
              <a href="https://discord.com/invite/Mnq3j46vkv" target="_blank">discord.gg/realmscans</a>
 
         </div>
