--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@ ul.cferror_details {
 
         </div>
     </div>
+    <div class="f-error-msg-content">Below is information , please dont share this with anyone except AJU.</br></br></div>
     ::CLOUDFLARE_ERROR_1000S_BOX::
+    <div class="f-error-msg-content">CONTACT AJU ON DISCORD FOR ANY ISSUE</br></br></div>
 </body>
 
 </html>
